# boundary

./: CMakeLists.txt  README.md  defines.h  euler.c  euler.h  gui.c  gui.h  linalg.c  linalg.h  main.c  parse.c  parse.h  prim.c  prim.h  render.c  render.h  scan.c  scan.h  shape.c  shape.h  tesselate.c  tesselate.h  transform.c  transform.h
rlimgui/: rlcimgui.c
shaders/: wireframe.frag  wireframe.vert
tests/: euler_tests.c
